# collaborative-localisation

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~  plots.py
msg/: Bearing.msg~  LBL.msg  LBL.msg~  USBL.msg  USBL.msg~
scenes/: cirs.xml~  running.txt  threerobots.xml  threerobots.xml~
scripts/: ICAzor.py  KalmanFilterAzor.py  NLSAzor.py  NLSRangeAzor.py  PFRangeAzor.py  ParticleFilterAzor.py  common.py  filter.py  getDeadReckoningAzor.py  getLBL1ReadingForAzor.py  getLBL1ReadingForTom.py  getLBL2ReadingForAzor.py  getLBL2ReadingForTom.py  getLBLReadingClient.py~  getLBLReadingServer.py~  getPointFromLBLReadings.py  getPointFromUSBLReading.py  getUSBLReadingForAzor.py  getUSBLReadingForTom.py  getUSBLReadingForTom.py~  runAll.py  runAllRange.py  runTrial.sh  simulateRange.py
srv/: getLBLReading.srv  getLBLReading.srv~  getPointFromLBL.srv  getPointFromLBL.srv~  getPointFromUSBL.srv  getPointFromUSBL.srv~  getUSBLReading.srv
