<?xml version="1.0"?>
<package>
  <name>multi_robot_localisation</name>
  <version>0.0.0</version>
  <description>The multi_robot_localisation package</description>

  <maintainer email="raluca.scona@gmail.com">Raluca Scona</maintainer>

  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend> 
  <build_depend>urdf</build_depend>  
  <build_depend>underwater_sensor_msgs</build_depend> 
  <build_depend>uwsim_bullet</build_depend>
  <build_depend>uwsim_osgbullet</build_depend>
  <build_depend>uwsim_osgocean</build_depend>
  <build_depend>uwsim_osgworks</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend> 
  <run_depend>urdf</run_depend>  
  <run_depend>underwater_sensor_msgs</run_depend> 
  <run_depend>uwsim_bullet</run_depend>
  <run_depend>uwsim_osgbullet</run_depend>
  <run_depend>uwsim_osgocean</run_depend>
  <run_depend>uwsim_osgworks</run_depend>



  <export>
  </export>
</package>
